Correction nouveau position mobile

--- a/style/style.css
+++ b/style/style.css
@@ -351,7 +351,7 @@ a:link {
   font-weight: 600;
   z-index: 1;
   position: absolute;
-  top:650px;
+  top:670px;
   right: 50px;
 
 
